--- a/esp/platformio.ini
+++ b/esp/platformio.ini
@@ -4,7 +4,7 @@ board = esp32dev
 framework = arduino
 upload_speed = 230400
 monitor_speed = 115200
-monitor_port = /dev/cu.usbserial-1120 
+monitor_port = COM3 
 build_flags = 
     -DCORE_DEBUG_LEVEL=0  ; Enable detailed debugging
 
@@ -16,4 +16,4 @@ lib_deps =
     WiFiUDP
     ESP32Servo
 
-upload_port = /dev/cu.usbserial-1120   ; Change to your specific port (for Windows users)
+upload_port = COM3   ; Change to your specific port (for Windows users)
